# konficurator

./: .dockerignore  .gitignore  COMPLETION_STATUS.md  DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  FILE_PATH_DISPLAY_FEATURE.md  FILE_PATH_DISPLAY_TEST_RESULTS.md  LICENSE  PROJECT_SUMMARY.md  README.md  STATUS.md  TESTING.md  debug-storage.html  deploy.sh  dev.sh  docker-compose.yml  index.html  jest.config.cjs  jest.config.js  nginx.conf  package-lock.json  package.json  test-features.html  test-file-path-display.html  test-persistence.sh  tsconfig.eslint.json  tsconfig.json  validate-file-path-display.js  validate-persistence-fix.sh  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
build-tools/: gzip.cjs  gzip.js  optimize.cjs  optimize.js  vite-build.cjs
coverage/: index.html  lcov.info
dev-tools/: build-wasm.sh  dev.sh  validate-error-fix.sh  validate-file-refresh.sh  validate-file-toggle.sh  validate-permission-flow.sh
docs/: CI_CD_PIPELINE_COMPLETE.md  DOCKER.md  DOCKER_CONFIGURATION.md  DOCKER_FINAL_VALIDATION_COMPLETE.md  DOCKER_VALIDATION_COMPLETE.md  DOCKER_WASM_INTEGRATION_COMPLETE.md  ENHANCED_STORAGE_IMPLEMENTATION.md  ENHANCEMENT_SUMMARY.md  FILE_PATH_DISPLAY_FEATURE.md  FILE_REFRESH_IMPLEMENTATION_COMPLETE.md  FILE_TOGGLE_FEATURE.md  FINAL_STATUS.md  FINAL_VALIDATION_COMPLETE.md  GITHUB_ACTIONS_DOCKER_FIX_COMPLETE.md  GITHUB_ACTIONS_UPDATE.md  OPTIMIZATION_COMPLETE.md  PERSISTENCE_FIX.md  (+17 more)
parser-wasm/: Cargo.toml  README.md  package-lock.json  package.json
parser-wasm/fixtures/: test.env  test.json  test.xml
parser-wasm/pkg/: parser_core.d.ts
parser-wasm/src/: env_parser.rs  json_lexer.rs  json_parser.rs  lib.rs  multi_validation.rs  schema.rs  tests.rs  xml_parser.rs
(+122 files in other folders)
