[package]
name = "parser-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
json-syntax = "0.12"
xmlparser = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
