[package]
name = "parser-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
xmlparser = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = "0.4"
memchr = "2.7.5"
smallstr = "0.3.0"
json-event-parser = "0.2.2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
