[package]
name = "parser-core"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
xmlparser = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = "0.4"
memchr = "2.7.5"
smallstr = "0.3.0"
json-event-parser = "0.2.2"
jsonschema = { version = "0.17", default-features = false, features = ["draft201909", "draft202012"] }
once_cell = "1.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
